--- a/package.json
+++ b/package.json
@@ -1,47 +1,68 @@
 {
-  "name": "stock-analyzer",
-  "version": "0.0.0",
-  "license": "MIT",
-  "description": "Stock Analyzer",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
-  }
+    "name": "stock-analyzer",
+    "version": "0.0.0",
+    "description": "A tool to analyze stocks",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build --prod",
+        "build-dev": "ng build --prod --sourcemaps",
+        "test": "ng test --watch=false --single-run=true --code-coverage=true",
+        "lint": "ng lint",
+        "e2e": "testcafe ie e2e/**/*e2e.ts --selector-timeout 25000 --assertion-timeout 25000 --speed 1.0 -s test-reports/screenshots -r xunit > e2e-xunit.xml",
+        "doc": "./node_modules/.bin/compodoc -p tsconfig.json -n \"Stock Analyzer documentation\" -d ./doc"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular-redux/store": "^6.6.0",
+        "@angular/animations": "^5.1.2",
+        "@angular/common": "^5.1.2",
+        "@angular/compiler": "^5.1.2",
+        "@angular/core": "^5.1.2",
+        "@angular/forms": "^5.1.2",
+        "@angular/http": "^5.1.2",
+        "@angular/platform-browser": "^5.1.2",
+        "@angular/platform-browser-dynamic": "^5.1.2",
+        "@angular/router": "^5.1.2",
+        "@ngx-translate/core": "^8.0.0",
+        "@ngx-translate/http-loader": "^2.0.1",
+        "angular-pipes": "^6.5.3",
+        "bootstrap": "3.3.6",
+        "core-js": "^2.5.3",
+        "primeng": "^5.0.2",
+        "redux": "^3.7.2",
+        "rxjs": "^5.5.6",
+        "seamless-immutable": "^7.1.2",
+        "web-animations-js": "^2.3.1",
+        "zone.js": "^0.8.19"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.6.3",
+        "@angular/compiler-cli": "^5.1.2",
+        "@angular/language-service": "^5.1.2",
+        "@types/jasmine": "~2.5.54",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^6.0.95",
+        "@types/seamless-immutable": "^7.1.1",
+        "codelyzer": "^3.2.2",
+        "jasmine-core": "~2.6.2",
+        "jasmine-spec-reporter": "~4.1.1",
+        "karma": "~1.7.1",
+        "karma-chrome-launcher": "~2.1.1",
+        "karma-clear-screen-reporter": "^1.0.0",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^1.3.3",
+        "karma-jasmine": "^1.1.1",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "karma-junit-reporter": "^1.2.0",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-verbose-reporter": "0.0.6",
+        "minimist": "^1.2.0",
+        "protractor": "~5.1.2",
+        "testcafe": "^0.18.6",
+        "ts-node": "~3.2.2",
+        "tslint": "~5.7.0",
+        "typescript": "~2.4.2"
+    }
 }
