--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "angular-pipes": "^7.1.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "redux": "^3.7.2",
     "rxjs": "^5.5.6",
     "seamless-immutable": "^7.1.3",
@@ -43,6 +45,7 @@
     "@types/node": "^9.6.0",
     "@types/seamless-immutable": "^7.1.1",
     "codelyzer": "^4.2.1",
+    "jasmine": "^3.0.0",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^2.0.0",
