--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 
 node_js:
-   - node # will use latest node
+   - "8.10.0"
 
 before_script: # commands to run before the build step
    - npm install -g --silent @angular/cli
 
 script: # the build step
+   - ng test --reporters progress
    - ng build --prod
