--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ node_js:
 before_script: # commands to run before the build step
    - npm install -g --silent @angular/cli
 
+cache:
+  directories:
+    - "node_modules"
+
 script: # the build step
    - ng test --reporters progress
    - ng build --prod
