Added single run

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ cache:
     - "node_modules"
 
 script: # the build step
-   - ng test --reporters progress
+   - ng test --single-run true --reporters progress
    - ng build --prod
