--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "angular-pipes": "^7.1.0",
         "bootstrap": "^4.0.0",
         "core-js": "^2.5.3",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "popper.js": "^1.12.9",
         "redux": "^3.7.2",
